--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <resources>
     <color name="photo_placeholder">#ccc</color>
-    <color name="theme_primary">#04561A</color>
-    <color name="theme_primary_dark">#04561A</color>
-    <color name="theme_accent">#04561A</color>
+    <color name="theme_primary">#00695C</color>
+    <color name="theme_primary_dark">#004D40</color>
+    <color name="theme_accent">#283593</color>
     <color name="ltgray">#ffe0e0e0</color>
 </resources>
