--- a/XYZReader/src/main/res/values/styles.xml
+++ b/XYZReader/src/main/res/values/styles.xml
@@ -6,5 +6,9 @@
         <item name="colorAccent">@color/theme_accent</item>
     </style>
 
+    <style name="Theme.Bacon.Fullscreen" parent="Theme.Bacon">
+        <item name="android:windowFullscreen">true</item>
+    </style>
+
 
 </resources>
