--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -21,6 +21,7 @@
                 android:background="@color/photo_placeholder">
                 <!--suppress AndroidLintContentDescription -->
                 <ImageView
+                    android:src="@drawable/empty_detail"
                     android:scaleType="centerCrop"
                     android:id="@+id/photo"
                     android:layout_width="match_parent"
